# opsforge

./: .coverage  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  opsforge.yaml  pyproject.toml  release-metadata.json  test_config.py
.github/workflows/: ci.yml
opsforge/: cli.py  config.py  docker_ops.py  doctor.py  health.py  quality.py  release.py  validator.py
sample_service/: app.py
scripts/: demo.sh
tests/: test_cli.py  test_compose_validation.py  test_docker_ops.py  test_doctor.py  test_failure_cases.py  test_health.py  test_lifecycle.py  test_release.py  test_validator.py
