[project]
name = "opsforge"
version = "0.1.0"

dependencies = [
    "typer>=0.16.0",
    "PyYAML>=6.0",
    "requests>=2.32.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "black>=25.0.0",
    "ruff>=0.12.0",
    "pre-commit>=4.0.0"
]

[project.scripts]
opsforge = "opsforge.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["opsforge"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
